[metadata]
name = orb_it
version = 0.2
author = Aidan Berres, Joachim Moeyens
author_email = aidan@b612foundation.org
description = Orbital Integrator Tester
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.7
install_requires =
    numpy
    pandas
    astropy
    pyyaml >= 5.1
    matplotlib
    ipykernel
    astroquery
